# corporacao-senciente

./: .aios-installation-config.yaml  .aios-sync.yaml  .coderabbit.yaml  .current_task_context  .cursorrules  .daemon_id  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .project-context.md  .qwen.instructions.md  .refactor_guide_REFACTOR-TEST-001.md  .releaserc.json  .sentient_protocols.md  AUDITORIA_FULLSTACK_BETTING_RELATORIO_FINAL.md  BET-001-execution-summary.json  BETTING_PLATFORM_FINAL_REPORT.md  BetfairClient.ts  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONFIGURATION.md  CONTEXTO-DIANA.md  CONTRIBUTING.md  Dockerfile  GR8-V2-SUMMARY.md  HALLUCINATION_SUMMARY.txt  IMPLEMENTATION-COMPLETE-REPORT.md  IMPLEMENTATION-SUMMARY-RAG.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTENCAO-GENESIS.md  LICENSE  MANIFEST.in  MULTI-CLIS.bat  Para executar, basta rodar  PinnacleClient.ts  (+33 more)
.agent/rules/: AIDER_CONSTITUTION.md  AIDER_GIT_PROTOCOL.md  STABILITY_PROTOCOL.md  byterover-rules.md
.aios/: codebase-map.json  component_inventory.json  evolution_registry.json  gotchas.json  gotchas.md  merge-rules.yaml  migration-inventory.json  path-analysis-report.json  patterns.md  project-status.yaml
.aios-core/: .env.example  AIDER-ENFORCEMENT-README.md  ARQUITETURA_INTERFACES.md  CORRECAO_MODELOS_GRATUITOS.md  ESTRATEGIA_API_KEYS.md  INTERFACES_INTERACAO.md  MORDOMO-ACTIVATION-GUIDE.md  MORDOMO-GUIDE.md  PRONTO_PARA_EXECUTAR.md  README_INDEPENDENCIA.md  REFORCO-MORDOMO-RESUMO.md  SQUAD-STANDARDS-COMPLETE.md  SUMMARY-GENERATION-STRATEGY.md  constitution.md  core-config (2).yaml  core-config.yaml  install-manifest (2).yaml  install-manifest.yaml  package (2).json  package.json  test-agent-config-models.js  test-agent-configure-fix.js  test-agent-duplication-fix.js  test-complete-model-consistency.js  test-independence.js  test-menu-numeric-selection.js  test-task-execution.js
.aios-core/bridges/: README.md  game_interface.py
.aios-core/checklists/: aider-execution-validation.md  completeness-check.md  deep-research-quality.md  executor-matrix-checklist.md  quality-gate-checklist.md  task-anatomy-checklist.md
.aios-core/config/: identity.json
.aios-core/core/: branding.py  reference_linker.py
.aios-core/cortex/: server.js
.aios-core/data/: default-model.json  hybrid-ops-best-practices.md  workflow-patterns (2).yaml
.aios-core/identity/: identity_core.yaml  intention_sync.js
.aios-core/infrastructure/: polvo_handshake.js
.aios-core/knowledge/: rag_engine.js
.aios-core/llm/: llm_factory.js
.aios-core/monitor/: cost-accumulator.js  hallucination_logger.js  (+1 more)
.claude/: CLAUDE.md  settings.json  statusbar-variants.md
.github/: FUNDING.yaml  ISSUE_DRAFT_P0_missing_module.md  PULL_REQUEST_TEMPLATE.md  RFC_TEMPLATE.md  dependabot.yml  labeler.yml
apps/: README.md
assets/: email_signature.html
az-os/: MANIFEST.in  README.md  pyproject.toml  setup.py
az_os/: __main__.py
config/: alert-config.json  arete.env  arete.env.example  environment-config.json  llm_config.json  production.env  production.env.example  production.yaml  terminal-settings.json  tools_config.json
data/: BettingOps-AIOS.md  BookmakerIntegration-AIOS.md  LiveBetting-AIOS.md  README.md  api-connect.md  auth-router.ts  bookmaker-integration-squad.yaml  bookmaker-lead.md  ceo-bet.md  chat_ide_verification.json  daemon_state.json  daily-briefing.md  embeddings_cache.json  evolution_registry.json  instant-bet.md  live-lead.md  orchestrate-analytics.md  orchestrate-data.md  orchestrate-infra.md  orchestrate-live-betting.md  orchestrate-strategy.md  pc_metrics.json  portfolio-review.md  squad.yaml  strategic-decision.md  tasks.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  HALLUCINATION_MONITORING.md  INDEX.md  INSTALLATION.md  README.md  SECURITY-AUDIT-SUMMARY.md  SECURITY.md  STARTUP-DUAL-MODE.md  STATUS-HARMONIZACAO-FEB14.md  TROUBLESHOOTING.md  USAGE.md  WHITELIST-API.md
hooks/: commit-msg.ps1  commit-msg.sh  post-commit.ps1  post-commit.sh  post-merge.ps1  post-merge.sh
instances/: .gitkeep
knowledge/: byterover_feed.md  self_reflection_test.md
libs/: README.md
results/: betting-masterplan-v1.json  fix-sprint4-test-coverage.json
scripts/: Control-Panel.ps1  Export-MetricsHistory.ps1  Get-SystemStatus.ps1  Initialize-WorkerEnvironment.ps1  Install-PM2Service.ps1  Invoke-WorkerHandoff.ps1  Launch-Diana-Terminal-AutoStop.ps1  Launch-Diana-Terminal-Evolucao.ps1  Launch-Diana-Terminal.ps1  Launch-Hive-Tab.ps1  Launch-Logs-Tab.ps1  Launch-PM2-Tab.ps1  Launch-Visual-Panel.ps1  Repair-FilePermissions.ps1  Restart-Component.ps1  Send-Alert.ps1  Start-Component.ps1  Start-CorporacaoSenciente.ps1  Stop-Component.ps1  Stop-Diana-Complete.ps1  Test-EndToEndWorkflow.ps1  Test-ProcessHealth.ps1  Toggle-Genesis.ps1  Update-EnvironmentConfig.ps1  Validate-Migration.ps1  Watch-Workers.ps1  activate-squad.sh  aider-worker-engine.ps1  aider_with_fallback.py  aider_worker_engine.py  analyze-atr-levels.py  analyze-signals.py  audit-dashboard-views.mjs  audit-dependencies.py  check-diana-status.ps1  check-diana-status.py  check-dna-status.py  check-dna-v2-stats.py  check-dna-v2-status.py  check-heartbeats.ps1  (+111 more)
security/: source_whitelist.json
src/: index.ts  main.py  setupTests.ts
tasks/: BLUEPRINT_20260201_170642.md
tests/: conftest.py  epic-verification.test.js  identity-validation.test.js  rag_pipeline.test.js  setup.js  story-update-hook.test.js  test_acceptance.py  test_basic.py  test_cache.py  test_cli.py  test_config.py  test_core.py  test_error_handler.py  test_execution.py  test_integration.py  test_llm_client.py  test_logging.py  test_mcp_client.py  test_model_router.py  test_react_loop.py  test_scheduler.py  test_security.py  test_self_healer.py  test_stories.py  test_telemetry.py
tools/: README.md  mcp-checker.ps1
utils/: email_validator.py  password_validator.py
workers/claude-wrapper/: Cargo.toml  invoke-ceo-isolated.ps1  run-claude.ps1  test-wrapper.bat
workers/claude-wrapper/src/: main.rs
(+5587 files in other folders)
