[tool.poetry]
name = "corporacao-senciente-holding"
version = "0.1.0"
description = "Holding Autônoma que cria e gerencia múltiplas empresas subsidiárias"
authors = ["Corporação Senciente <admin@corporacao-senciente.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
chromadb = "^0.4.18"
openai = "^1.3.7"
supabase = "^2.3.0"
stripe = "^7.4.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.4.0"           # Substitui black, isort, flake8 - 100x mais rápido
mypy = "^1.7.1"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "supabase.*",
    "stripe.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "backend/presentation/api/main.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# ==============================================================================
# RUFF - Linting e Formatting 100x mais rápido (escrito em Rust)
# Substitui: Pylint + Flake8 + Black + isort
# ==============================================================================

[tool.ruff]
# Versão do Python alvo
target-version = "py312"
# Tamanho máximo de linha
line-length = 88
# Excluir diretórios
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
    "node_modules",
    "migrations",
]

[tool.ruff.lint]
# Regras habilitadas
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
# Regras ignoradas
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
# Testes podem ter imports não usados para fixtures
"tests/**/*.py" = ["ARG001", "F401"]
# Scripts podem ter código mais flexível
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
# Forçar single-line imports
force-single-line = false
# Seções conhecidas
known-first-party = ["backend", "scripts"]

[tool.ruff.format]
# Usar aspas duplas
quote-style = "double"
# Indent com 4 espaços
indent-style = "space"
# Vírgula após último item
skip-magic-trailing-comma = false
# Compatível com Black
line-ending = "auto"