[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "az-os"
version = "1.0.0"
description = "Agent Zero Operating System - CLI-first AI operating system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Diana Corporacao Senciente", email = "contact@diana.ai"},
]
keywords = ["cli", "ai", "llm", "automation", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: System :: Software Distribution",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "typer>=0.12.0",
    "litellm>=1.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.9.0",
    "dynaconf>=3.2.0",
    "gitpython>=3.1.0",
    "asyncstdlib>=3.10.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.82.0",
    "rich>=13.9.0",
    "rich-click>=1.7.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.1.0",
    "google-generativeai>=0.3.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]
security = [
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
az = "az_os.cli.main:app"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = [
    "py311"
]
include = "\\.pyi?$"
extend-exclude = '''
/(\
  # directories
  \\\.eggs
  | \\\.git
  | \\\.hg
  | \\\.mypy_cache
  | \\\.tox
  | \\\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true