[package]
name = "claude-wrapper"
version = "1.0.0"
edition = "2021"

[dependencies]
dirs = "5.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
